update: the review

--- a/_posts/2020-06-16-tunit.md
+++ b/_posts/2020-06-16-tunit.md
@@ -110,12 +110,28 @@ guiding network E 가 모든 이미지를 하나의 style code 로 뽑는 것도
 
 #### Reconstruction Loss
 
-여기도 특별한 건 없고 image x 와 해당 style s 에 대해 생성된 이미지와의 L1 loss 를 minimize 합니다.
+여기도 특별한 건 없고, image x 와 해당 style s 에 대해 생성된 이미지와의 L1 loss 를 minimize 합니다.
+
+### Total Loss
+
+> $L_{D} = - L_{adv}$
+> $L_{G} = L_{adv} + \lambda_{style}^G} L_{style}^G + \lambda_{rec} L_{rec}$
+> $L_{E} = L_{G} - \lambda_{MI}} L_{MI} + \lambda_{style}^E L_{style}^E$
 
 ## Experiment Result
 
+### Translation Loss on AnimalFaces-10
 
+$L_{style}$, $L_{rec}$ 없을 때 하고 풀버전(?) 하고 거의 유사하긴 하지만, 모두 적용했을 때가 제일 FID 가 좋네요.
 
+![img](/assets/TUNIT/translation-loss.png)
+
+### t-SNE visualization of the style space
+
+$K = 10$ 설정일 때, style code 들이 얼마나 cluster 별 domain style 을 뽑고 있나 봤을 때, 
+잘 분리하고 있는 걸 보여줍니다.
+
+![img](/assets/TUNIT/t-SNE-vis.png)
 
 ## Conclusion
 
