--- a/_posts/2020-06-16-tunit.md
+++ b/_posts/2020-06-16-tunit.md
@@ -71,22 +71,22 @@ Image-to-Image Translation 쪽 papers 이 정도만
 
 > $I(p,p^+) = H(p) - H(p\|p^+)$, $p = E_{class}(x)$
 
-여기서 image $x$ 라 하면, $x^+$ 는 augmented image $x$ 이고, $p$ K domains 에 대한 확률 값이라 볼 수 있겠습니다. (softmax 가 정확히는 확률 값은 아니지만)
+여기서 image $x$ 라 하면, $x^+$ 는 augmented image $x$ 이고, $p$ 는 K domains 에 대한 확률 값이라 볼 수 있겠습니다. (softmax 가 정확히는 확률 값은 아니지만)
 
-$entropy H(p)$ 가 maximize, $cond entropy H(p\|p^+)$ 가 minimize 되면서, 
+entropy $H(p)$ 가 maximize, cond entropy $H(p\|p^+)$ 가 minimize 되면서, 
 결과적으로 해당 MI 가 maximize 되면, 모든 samples 들이 K domains 에 골고루 분포되면서,
 augmented 된 domain 들에 대해선 같은 domain 으로 묶겠죠?
 
 위 공식을 entropy loss scheme 으로 다시 써 보면 아래처럼 됩니다.
 
-> $L_{MI} = I(p,p^+) = I(P) = \sum_{i=1}^K \sum_{j=1}^K P_{ij} ln \frac_{P_{ij}}{P_{i}P_{j}}$, $P_{ij} = P(p = i, p^+ = j)$
+> $L_{MI}$ = $I(p,p^+)$ = $I(P)$ = $\sum_{i=1}^K \sum_{j=1}^K P_{ij} \log \frac_{P_{ij}}{P_{i}P_{j}}$, $P_{ij} = P(p = i, p^+ = j)$
 
 #### Improving Domain Classification
 
 image 가 higher-resolution & complex 하고 diverse 하는 문제를 극복하기 위해 
 domain classification 이외에 auxiliary branch 로 style code 를 뽑아 여기에 contrastive loss 를 붙였습니다.
 
-> $L_{style}^E = - log \frac_{exp(s * s^+ / \unicode{932})}{\sum_{i=0}^N exp(s * s_{i}^- / \unicode{932})}$
+> $L_{style}^E = - log \frac_{exp(s * s^+ / t)}{\sum_{i=0}^N exp(s * s_{i}^- / t)}$
 
 이런 식인데, contrastive loss 목적처럼 positive pair 는 가깝게, negative pair 는 멀리 보내는 역할을 합니다.
 
@@ -101,9 +101,9 @@ adv loss 도 simple 한 vanilla gan loss 를 사용하네요.
 
 #### Style Contrastive Loss
 
-> $L_{style}^G = - log \frac_{exp(s^' * s^~ / \unicode{932})}{\sum_{i=0}^N exp(s^' * s_{i}^- / \unicode{932})}$
+> $L_{style}^G = - log \frac_{exp(s^{'} * s^~ / t)}{\sum_{i=0}^N exp(s^{'} * s_{i}^- / t)}$
 
-$s^' = E_{style}(G(x, s^~))$, $s^'$ 는 생성된 이미지에 대한 style 이고 (positive), - 는 negative style.
+$s^{'} = E_{style}(G(x, s^~))$, $s^{'}$ 는 생성된 이미지에 대한 style 이고 (positive), - 는 negative style.
 
 위 loss function 을 사용하면 ref image x 에 대해 생성된 이미지가 유사해 지니 (positive 는 유사, negative 는 안유사),
 guiding network E 가 모든 이미지를 하나의 style code 로 뽑는 것도 막을 수 있겠죠. (여기서 only recon loss 만 사용할 때 문제)
