update: the review

--- a/_posts/2020-06-16-tunit.md
+++ b/_posts/2020-06-16-tunit.md
@@ -115,8 +115,8 @@ guiding network E 가 모든 이미지를 하나의 style code 로 뽑는 것도
 ### Total Loss
 
 > $L_{D} = - L_{adv}$
-> $L_{G} = L_{adv} + \lambda_{style}^G} L_{style}^G + \lambda_{rec} L_{rec}$
-> $L_{E} = L_{G} - \lambda_{MI}} L_{MI} + \lambda_{style}^E L_{style}^E$
+> $L_{G} = L_{adv} + \lambda_{style}^G L_{style}^G + \lambda_{rec} L_{rec}$
+> $L_{E} = L_{G} - \lambda_{MI} L_{MI} + \lambda_{style}^E L_{style}^E$
 
 ## Experiment Result
 
