update: the review

--- a/_posts/2020-06-16-tunit.md
+++ b/_posts/2020-06-16-tunit.md
@@ -79,14 +79,14 @@ augmented 된 domain 들에 대해선 같은 domain 으로 묶겠죠?
 
 위 공식을 entropy loss scheme 으로 다시 써 보면 아래처럼 됩니다.
 
-> $L_{MI}$ = $I(p,p^+)$ = $I(P)$ = $\sum_{i=1}^K \sum_{j=1}^K P_{ij} \log \frac_{P_{ij}}{P_{i}P_{j}}$, $P_{ij} = P(p = i, p^+ = j)$
+> $L_{MI}$ = $I(p,p^+)$ = $I(P)$ = $\sum_{i=1}^{K} \sum_{j=1}^{K} P_{ij} \log \frac{P_{ij}}{P_{i}P_{j}}$, $P_{ij} = P(p = i, p^+ = j)$
 
 #### Improving Domain Classification
 
 image 가 higher-resolution & complex 하고 diverse 하는 문제를 극복하기 위해 
 domain classification 이외에 auxiliary branch 로 style code 를 뽑아 여기에 contrastive loss 를 붙였습니다.
 
-> $L_{style}^E = - log \frac_{exp(s * s^+ / t)}{\sum_{i=0}^N exp(s * s_{i}^- / t)}$
+> $L_{style}^E = - log \frac{exp(s * s^+ / t)}{\sum_{i=0}^N exp(s * s_{i}^- / t)}$
 
 이런 식인데, contrastive loss 목적처럼 positive pair 는 가깝게, negative pair 는 멀리 보내는 역할을 합니다.
 
@@ -101,7 +101,7 @@ adv loss 도 simple 한 vanilla gan loss 를 사용하네요.
 
 #### Style Contrastive Loss
 
-> $L_{style}^G = - log \frac_{exp(s^{'} * s^~ / t)}{\sum_{i=0}^N exp(s^{'} * s_{i}^- / t)}$
+> $L_{style}^G = - log \frac{exp(s^{'} * s^~ / t)}{\sum_{i=0}^N exp(s^{'} * s_{i}^- / t)}$
 
 $s^{'} = E_{style}(G(x, s^~))$, $s^{'}$ 는 생성된 이미지에 대한 style 이고 (positive), - 는 negative style.
 
