--- a/_posts/2020-09-07-NVAE.md
+++ b/_posts/2020-09-07-NVAE.md
@@ -11,22 +11,34 @@ posted by [kozistr](http://kozistr.tech)
 
 ## tl;dr
 
+최근(?)에 NVLabs 에서 VAE 관련 논문이 하나 나왔는데, 매주 월요일이 회사 짬데이라고 개인 or 팀 끼리 공부하고 공유하는 문화가 있어서, 마침 잘 돼서 논문 리뷰를 해 봅니다.
+
 paper : [arXiv](https://arxiv.org/pdf/2007.03898.pdf)
 
 code : [github](https://github.com/NVlabs/NVAE)
 
+twitter : [twitter](https://twitter.com/ArashVahdat/status/1281036985981825024/photo/1)
+
 ## Related Work
 
+VAE 관련 연구들이 엄청 많아서, 요 논문과 직접 연관이 있는 것들만 적어보면
+
+1. IAF-VAEs : [paper](https://arxiv.org/pdf/1606.04934.pdf)
+2. VQ-VAE-2 : [paper](https://arxiv.org/pdf/1906.00446.pdf)
+3. BIVA : [paper](https://arxiv.org/pdf/1902.02102.pdf)
 
 ## Introduce
 
 
 ## Proposed Approach
 
-
+![img](/assets/NVAE/architecture.png)
 
 ## Experiment Result
 
+이미지 생성 결과.
+
+![img](/assets/NVAE/generated_images.png)
 
 ## Conclusion
 
