update: the review

--- a/_posts/2020-09-07-NVAE.md
+++ b/_posts/2020-09-07-NVAE.md
@@ -23,12 +23,34 @@ twitter : [twitter](https://twitter.com/ArashVahdat/status/1281036985981825024/p
 
 VAE 관련 연구들이 엄청 많아서, 요 논문과 직접 연관이 있는 것들만 적어보면
 
-1. IAF-VAEs : [paper](https://arxiv.org/pdf/1606.04934.pdf)
-2. VQ-VAE-2 : [paper](https://arxiv.org/pdf/1906.00446.pdf)
-3. BIVA : [paper](https://arxiv.org/pdf/1902.02102.pdf)
+1. IAF-VAEs (VAE w/ Invertible Autoregressive Flows) : [paper](https://arxiv.org/pdf/1606.04934.pdf)
+2. VQ-VAE-2 (Vector Quantized Variational AutoEncoder v2) : [paper](https://arxiv.org/pdf/1906.00446.pdf)
+3. BIVA (Bidirectional-Inference Variational Autoencoder) : [paper](https://arxiv.org/pdf/1902.02102.pdf)
 
-## Introduce
+## Difference
 
+논문에서 previous works 와 this work 의 차이를 *related work* 에 적힌 3 개의 연구와 비교를 합니다.
+
+요약하면 아래와 같습니다.
+
+### VQ-VAE-2 vs NVAE
+
+비슷한 점은 둘 다 high quality image 생성이 가능하다는 점
+
+| diff \ work | VQ-VAE-2 | NVAE |
+| :---: | :---: | :---: |
+| objective | ~~VAE objective~~ | VAE objective |
+| latent variable | up to 128x128 (big) | small | 
+
+### IAF-VAEs vs NVAE
+
+statistical models (hierarchical prior, approximate posterior) 컨셉을 IAF-VAEs 에서 가져온 것은 맞는데,
+
+| diff \ work | IAF-VAEs | NVAE |
+| :---: | :---: | :---: |
+| statistical models | ~~neural network~~ | neural network |
+| posterior | x | parameterized | 
+| large-scale | x | o |
 
 ## Proposed Approach
 
