update: the review

--- a/_posts/2020-09-07-NVAE.md
+++ b/_posts/2020-09-07-NVAE.md
@@ -17,8 +17,6 @@ paper : [arXiv](https://arxiv.org/pdf/2007.03898.pdf)
 
 code : [github](https://github.com/NVlabs/NVAE)
 
-twitter : [twitter](https://twitter.com/ArashVahdat/status/1281036985981825024/photo/1)
-
 ## Related Work
 
 VAE 관련 연구들이 엄청 많아서, 요 논문과 직접 연관이 있는 것들만 적어보면
@@ -51,6 +49,11 @@ statistical models (hierarchical prior, approximate posterior) 컨셉을 IAF-VAE
 | statistical models | ~~neural network~~ | neural network |
 | posterior | x | parameterized | 
 | large-scale | x | o |
+
+### BN (Batch Normalization) in VAE?
+
+이전 연구들에선 BN 이 instability 를 cause 해서 사용을 지양했는데, 
+이번 엔구에선 BN parameter 를 적절하게 사용하면 오히려 좋은 성능이 나온다 라고 하더군요.
 
 ## Proposed Approach
 
