update: the review

--- a/_posts/2020-09-07-NVAE.md
+++ b/_posts/2020-09-07-NVAE.md
@@ -55,7 +55,26 @@ statistical models (hierarchical prior, approximate posterior) 컨셉을 IAF-VAE
 이전 연구들에선 BN 이 instability 를 cause 해서 사용을 지양했는데, 
 이번 엔구에선 BN parameter 를 적절하게 사용하면 오히려 좋은 성능이 나온다 라고 하더군요.
 
-## Proposed Approach
+## Novelty
+
+위와 같은 차이점들에 대해서 이번 연구는 요약해서 크게 3 가지 novelties 를 가집니다.
+
+### Network Design
+
+이전 Hierarchical VAE 연구들은 hierarchical 한 요소들을 objective term 이나 level 에서 고려헀지만, 
+
+이번 연구에서는 statistical models 을 **network design 자체에 녹여냈다**.
+
+### Stability
+
+hierarchical groups 수가 증가, input image size (high resolution) 가 커 지면서 stabilization 이 issue 가 되는데, 
+이를 직접 디자인한 **(1) network modules**, **(2) approximate posterior 를 parameterize** 함으로 문제 해결. 
+
+### Efficiency
+
+효율적은 operation 사용 (e.g. depthwise separable convolution at decoder) 으로 memory 를 아끼고 성능도 잡아냈다.
+
+## Architecture
 
 ![img](/assets/NVAE/architecture.png)
 
