--- a/_posts/2020-09-07-NVAE.md
+++ b/_posts/2020-09-07-NVAE.md
@@ -3,7 +3,7 @@ layout: post
 title: NVAE: A Deep Hierarchical Variational Autoencoder
 author: kozistr
 categories: deep-learning
-tags: DeepLearning, Hierarchical, VAE, Generative Models
+tags: DeepLearning, Hierarchical, VAE, Generative-Models
 use_math: true
 ---
 
