--- a/_posts/2020-09-07-NVAE.md
+++ b/_posts/2020-09-07-NVAE.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: NVAE: A Deep Hierarchical Variational Autoencoder
+title: NVAE A Deep Hierarchical Variational Autoencoder
 author: kozistr
 categories: deep-learning
 tags: DeepLearning, Hierarchical, VAE, Generative-Models
