update: the review

--- a/_posts/2020-09-07-NVAE.md
+++ b/_posts/2020-09-07-NVAE.md
@@ -129,7 +129,7 @@ encoder / decoder 에 사용된 residual network 안에 convolution kernel size 
 MobileNet-V2 에서 언급되었던 것 처럼, depthwise convolution 하나만 으로 대채만 하는 건, 
 각 channel 따로따로 동작하는 연산특 때문에 표현성(?)에서 제한이 있어서, 위 그림처럼 conv 1x1 으로 채널을 뻥튀기 해 준 후에 depthwise conv 5x5 를 적용합니다.
 
-### BatchNormalization
+#### BatchNormalization
 
 처음에 언급했듯, BN 은 training instability 때문에 BN 대신 WN (Weight Normalization) 을 사용했는데,
 
@@ -137,6 +137,14 @@ MobileNet-V2 에서 언급되었던 것 처럼, depthwise convolution 하나만 
 이 문제를 해결하기 위해 BN momentum 값을 batch statistics 을 빠르게 잘 잡도록 변경을 해 줬다고 합니다.
 
 또한, scaling parameter 에 norm regularization 도 해 줬다고 합니다.
+
+### Residual Cells for Bidirectional Encoder
+
+encoder 에서는 depthwise convolution 이 효과가 없어서 그냥 regular convolution 사용했다고 합니다.
+
+### Taming the Unbounded KL Term
+
+
 
 ## Experiment Result
 
