update: the review

--- a/_posts/2020-09-07-NVAE.md
+++ b/_posts/2020-09-07-NVAE.md
@@ -141,6 +141,12 @@ encoder 에서는 depthwise convolution 이 효과가 없어서 그냥 regular c
 
 ### Taming the Unbounded KL Term
 
+deep hierarchical VAE 를 훈련하는데 있어, unbounded KL 를 optimize 하기엔 어렵다는 말을 쭉 합니다.
+
+그래서 KL 를 잘 optimize 하고 stable 하게 훈련할 수있는 방법들을 제안합니다.
+
+#### Residual Normal Distributions
+
 
 
 ## Experiment Result
