--- a/_posts/2020/2020-09-07-NVAE.md
+++ b/_posts/2020/2020-09-07-NVAE.md
@@ -1,5 +1,5 @@
 ---
-title: NVAE: A Deep Hierarchical Variational Autoencoder
+title: NVAE A Deep Hierarchical Variational Autoencoder
 date: 2020-09-07
 update: 2020-09-07
 tags: 
